@@ -3,6 +3,7 @@ synaptic (0.62) unstable; urgency=low
   * debian/rules, debian/control:
     - use dh_icons and add appropriate b-d on debhelper
   * g++ 4.3 fixes (closes: #456044)
+  * use new CacheFile::ListUpdate() code in apt
 
  --
 
